--- a/.github/workflows/study-clock.yml
+++ b/.github/workflows/study-clock.yml
@@ -6,7 +6,7 @@ name: study-noti-cron
 on:
     # https://crontab.guru/
     schedule:
-    - cron: '35 8 * * 0,3'
+    - cron: '40 8 * * 0,3'
     workflow_dispatch:
       inputs:
         logLevel:
@@ -25,4 +25,4 @@ jobs:
       - name: curl
         uses: wei/curl@master
         with:
-          args: -X POST --data-urlencode payload={ channel:'#bot-test', text:'오늘 9시에 스터디가 있어요!' } https://hooks.slack.com/services/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
+          args: -X POST --data-urlencode "payload={\"channel\":\"#bot-test\", \"text\":\"오늘 9시에 스터디가 있어요! \"}" https://hooks.slack.com/services/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
